# OpenMS-Insight

./: .gitignore  CLAUDE.md  OPTIMIZATION_PLAN.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml  tests.yml
components/: __init__.py  heatmap.py  lineplot.py  sequenceview.py  table.py
core/: __init__.py  base.py  cache.py  serialization.py  state.py
docs/: heatmap-cascading-design.md  state-ownership-filtering.md
js-component/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
js-component/src/: App.vue
js-component/src/components/plotly/: PlotlyHeatmap.vue  PlotlyLineplot.vue  PlotlyVolcano.vue
js-component/src/components/sequence/: AminoAcidCell.vue  SequenceView.vue  modification.ts
js-component/src/components/tabulator/: TabulatorTable.vue  formatters.ts
js-component/src/composables/: usePlotlyScatter.ts
js-component/src/stores/: selection.ts  streamlit-data.ts
js-component/src/types/: component.ts  sequence-data.ts  tabulator-tables.d.ts
openms_insight/: __init__.py
openms_insight/components/: __init__.py  heatmap.py  lineplot.py  sequenceview.py  table.py  volcanoplot.py
openms_insight/core/: __init__.py  base.py  registry.py  state.py  subprocess_preprocess.py
openms_insight/preprocessing/: __init__.py  compression.py  filtering.py  scatter.py
openms_insight/rendering/: __init__.py  bridge.py
preprocessing/: __init__.py  compression.py  filtering.py
rendering/: __init__.py  bridge.py
streamlit_vue_components/components/: heatmap.py  table.py
streamlit_vue_components/core/: registry.py
streamlit_vue_components/preprocessing/: compression.py
tests/: conftest.py  test_bridge_annotations.py  test_cache_config_contract.py  test_cache_reconstruction.py  test_categorical_heatmap.py  test_component_args_contract.py  test_compression.py  test_heatmap_cascading.py  test_optimal_bins.py  test_prepare_vue_data_contract.py  test_sequenceview.py  test_streaming_table.py  test_streamlit_construction.py  test_subprocess_preprocessing.py  test_volcanoplot.py
tests/integration/: __init__.py  test_cross_component_selection.py  test_heatmap_render_order.py  test_tabulator.py  test_tabulator_filtering.py  test_tabulator_goto.py  test_tabulator_sorting.py
