[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamlit-vue-components"
version = "0.1.0"
description = "Interactive visualization components for Streamlit backed by Vue.js"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kohlbacher Lab" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.20.0",
    "polars>=0.19.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/kohlbacherlab/streamlit-vue-components"
Documentation = "https://github.com/kohlbacherlab/streamlit-vue-components#readme"
Repository = "https://github.com/kohlbacherlab/streamlit-vue-components"

[tool.hatch.build.targets.wheel]
packages = ["streamlit_vue_components"]

[tool.hatch.build.targets.sdist]
include = [
    "streamlit_vue_components",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "polars.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=streamlit_vue_components --cov-report=term-missing"
