[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openms-insight"
version = "0.1.4"
description = "Interactive visualization components for mass spectrometry data in Streamlit"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.9"
authors = [
    { name = "Tom David Müller" },
]
keywords = [
    "streamlit",
    "visualization",
    "mass-spectrometry",
    "proteomics",
    "openms",
    "vue",
    "plotly",
    "tabulator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "streamlit>=1.20.0",
    "polars>=0.19.0",
    "pandas>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/t0mdavid-m/OpenMS-Insight"
Documentation = "https://github.com/t0mdavid-m/OpenMS-Insight#readme"
Repository = "https://github.com/t0mdavid-m/OpenMS-Insight"
Issues = "https://github.com/t0mdavid-m/OpenMS-Insight/issues"

[tool.hatch.build]
exclude = [
    "**/__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["openms_insight"]

[tool.hatch.build.targets.wheel.force-include]
"openms_insight/js-component/dist" = "openms_insight/js-component/dist"

[tool.hatch.build.targets.sdist]
include = [
    "openms_insight/**",
    "js-component/dist/**",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.sdist.force-include]
"openms_insight/js-component/dist" = "openms_insight/js-component/dist"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "polars.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=openms_insight --cov-report=term-missing"
